syntax = "proto3";

package payment;

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse) {}
}

message PaymentRequest {
  string customerId = 1;
  double amount = 2;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}
